--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <header>
         <h1 id="tituloPrincipal">Uma Surpresa para Você</h1>
     </header>
@@ -54,9 +53,8 @@
         
         <section class="content-section fade-in-element">
             <h2>Palavras do Coração</h2>
-            <p id="mensagem1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt
-                ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
+            <p id="mensagem1">Eu não quero apenas dizer eu te amo, mas também obrigado. Obrigado por ser minha calmaria nos dias de caos, minha risada e meu porto seguro em todos os momentos. Olhar para trás e ver tudo que já vivemos me enche de orgulho, olhar para frente e imaginar tudo que ainda vamos
+            construir juntos me enche de esperança. Você me inspira a ser uma pessoa melhor a cada dia. Eu te amo.
             </p>
         </section>
 
